remove api prefix
